# auth-service

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  logging.yaml  pyproject.toml
docker/: compose.yaml
docker/dev/: Dockerfile  entrypoint.sh
docker/migrations-runner/: Dockerfile  entrypoint.sh
docker/prod/: Dockerfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 2025_05_24_1927-d05f884dedf8_create_collation_ci_text.py  2025_05_24_2036-2ba78492f417_create_pgcrypto_extention.py  2025_05_24_2039-4ba7d64948cd_create_users_table.py  2025_05_27_0329-eb5a05dda6e4_rename_password_hash_to_hashed_password.py
src/application/dto/: email_message.py
src/application/factory/: base.py  email_message.py
src/application/ports/: email_sender.py  hasher.py  password_hasher.py  repository.py  template_engine.py  token_signer.py
src/core/: config.py  constants.py  logging.py
src/domain/: errors.py
src/domain/entities/: base.py  confirm_token.py  refresh_token.py  reset_token.py  user.py
src/domain/ports/: password_hasher.py
src/domain/services/: password_hasher.py
src/domain/value_objects/: base.py  base64_strng.py  email.py  hashed_password.py  hashed_secret.py  jwt_token.py  ttl.py
src/infrastructure/database/: engine.py  mapper.py  session.py
src/infrastructure/database/models/: __init__.py  base.py  user.py
src/infrastructure/database/repository/: base.py  user.py
src/infrastructure/email/: console.py  smtp.py
src/infrastructure/security/: hasher.py  password_hasher.py  token_signer.py
src/infrastructure/templates/: jinja.py  jinja2.py
src/interface/http/: asgi.py
src/interface/http/controlles/: system.py
src/interface/http/schemas/: system.py
tests/: conftest.py
tests/intergations/: repository_test.py
tests/unit/: test_dto.py  test_email_sender.py  test_entity.py  test_factory.py  test_password_hasher.py  test_template_engine.py  test_token_signer.py  test_value_objects.py
