[project]
name = "auth-service"
version = "0.0.0"
description = "Микросервис аутентификации для платформы ExRateHub, отвечающий за регистрацию пользователей, вход, управление API-ключами и выдачу JWT-токенов."
readme = "README.md"
authors = [
    { name = "SharinAlex", email = "alex.shavrin200303@gmail.com" },
    { name = "theVeenrok", email = "veenrok@veenrok.com" },
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "granian>=2.3.1",
    "litestar>=2.16.0",
    "psycopg[binary]>=3.2.9",
    "pydantic[email]>=2.11.5",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "pwdlib[argon2]>=0.2.1",
    "pyjwt>=2.10.1",
    "redis[hiredis]>=6.1.0",
    "aiosmtplib>=4.0.1",
    "dishka>=1.6.0",
    "adaptix[pydantic,sqlalchemy]>=3.0.0b11",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.11",
    "granian[reload]>=2.3.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pre-commit>=4.2.0",
    "black>=25.1.0",
    "sqlalchemy[mypy]>=2.0.41",
    "isort>=6.0.1",
]

[tool.mypy]
python_version = 3.13
ignore_missing_imports = true
strict = true
files = ["src", "tests"]
allow_redefinition = false
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = ["E203",]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", ]

[tool.pydocstyle]
convention = "pep257"
match-dir = "src"
add-ignore = [
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in __init__
  "D203",  # 1 blank line required before class docstring
  "D213",  # Multi-line docstring summary should start at end of first line
]

[tool.black]
line-length = 120
target-version = ["py313"]
skip-string-normalization = false


